--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0"
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.14.0",
+    "react-slick": "^0.29.0",
+    "react-swipe": "^6.0.4",
+    "slick-carousel": "^1.8.1",
+    "swipe-js-iso": "^2.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
